<resources>

    // --------------Home Fragment--------------
    <string name="app_name">FastMart</string>

    <string name="welcome_text">Welcome</string>
    <string name="deal_of_the_day">Deals of the day</string>

    <string name="Mic_price">$108.20</string>
    <string name="Old_Mic_price">$199.99</string>
    <string name="Mic_name">RØDE PodMic</string>
    <string name="Microphones">Microphones</string>
    <string name="Mic_desc">Dynamic microphone, Speaker microphone</string>

    <string name="Black_Headphone_desc">Model: WH-1000XM4, Black</string>
    <string name="Beige_Headphone_desc">Model: WH-1000XM4, Beige</string>
    <string name="Headphone_price">$349.99</string>
    <string name="Headphone_name">SONY Premium Wireless Headphones</string>

    <string name="Headphone_detailed_desc">The technology with two noise sensors and two
                                                microphones on each ear cup detects ambient
                                                noise and sends the data to the HD noise
                                                minimization processor QN1. Using a new
                                                algorithm, the QN1 then processes and minimizes
                                                noise for different acoustic environments in real
                                                time. Together with a new Bluetooth Audio SoC</string>
    <string name="Buy_Now">Buy Now</string>

    <string name="Mic_detailed_desc">The PodMic is a broadcast-grade dynamic microphone
    optimized for podcasting. It has a rich, balanced sound, with an internal pop
    filter to minimize explosives and internal shock-mounting to reduce vibration.
    Constructed from all-metal, the PodMic is built to last and features an
    integrated swing mount for easy positioning. Optimized for use with the
    RØDECaster Pro, it also offers exceptional results with any high-quality
    microphone interface.</string>

    //-------------Product_Repository-------------


    // --------------Log_Signup_Activity--------------
    <string name="Get_Started_Now">Get Started now</string>
    <string name="logSignup_Description">Create an account or log in to explore about our app</string>

    // --------------Login_Fragment and Signup Fragment--------------
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Log_In">Log In</string>
    <string name="Hint_Email">Loisbecket@gmail.com</string>
    <string name="Hint_Password">*******</string>
    <string name="Verify_Password">Verify Password</string>
    <string name="Sign_Up">Sign Up</string>

    //--------------Splash--------------
    <string name="app_name_fast">Fast</string>
    <string name="app_name_mart">Mart</string>

    //--------------OnBoarding--------------
    <string name="Get_Started">Get Started</string>
    <string name="onboarding_desc">Discover products you love,\ndelivered to your door.</string>
    <string name="Welcome_to_FastMart">Welcome to FastMart"></string>

    //--------------Profile--------------------
    <string name="user_name">Cody Fisher</string>
    <string name="user_email">cody.fisher45@example.com</string>
    <string name="user_dob">12/07/1990</string>
    <string name="user_gender">Male</string>
    <string name="user_phone">+1 234 453 231 506</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

</resources>