<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    android:id="@+id/cardRecommended"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/OffWhite">

            <ImageView
                android:id="@+id/ivRecProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/blackheadphone" />

            <ImageView
                android:id="@+id/ivHeartRec"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:background="@drawable/empty_heart_icon"
                android:elevation="4dp"
                android:padding="6dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvRecPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Headphone_price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRecName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/Headphone_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRecModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Black_Headphone_desc"
            android:textColor="@color/V_Light_grey"
            android:textSize="11sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>